--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,39 @@
 * {
-    margin:0
+    margin:0;
+    font-family: sans-serif 
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#title {
+    font-size: 2rem;
+    text-align: center;
+    margin: 40px;
+}
+
+.input {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#todo-holder {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.todo-single {
+    display: flex;
+    padding: 10px;
+    border: 2px black solid;
+    gap: 20px;
+}
+
+.strike {
+    text-decoration: line-through;
 }
